# bodepontoio

./: .gitignore  ERROR_STRUCTURE.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
bodepontoio/: __init__.py  admin.py  apps.py  backends.py  conf.py  emails.py  exceptions.py  middleware.py  mixins.py  models.py  models_managers.py  otp.py  pagination.py  renderers.py  serializers.py  setup.py  signals.py  tokens.py  urls.py  views.py
bodepontoio/assets/: paises.csv
bodepontoio/geo/: README.md  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
bodepontoio/geo/management/commands/: import_geo_data.py
bodepontoio/geo/migrations/: 0001_initial.py
bodepontoio/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
bodepontoio/management/commands/: bpio_criar_userauth.py  bpio_importar_paises.py  compress-images-with-tinify.py  compress_images_with_tinify.py
bodepontoio/metrics/: __init__.py  metrics.py
bodepontoio/migrations/: 0001_initial.py  0002_auto_20190625_1631.py  0002_user_is_email_verified.py  0002_userauth.py  0002_userprofile.py  0003_backfill_userauth.py  0003_consultacep_pais_alter_user_options_and_more.py  0003_loginrecord.py  0003_otpcode.py  0004_alter_loginrecord_id_alter_pais_id.py  0004_alter_otpcode_purpose.py  0006_optimizedimagewithtinypng.py  0007_alter_loginrecord_id_and_more.py  0008_add_consulta_cep.py  0008_delete_bitcoinquote.py
bodepontoio/services/: auth.py  cep_service.py  tokens.py
bodepontoio/templates/adminsortable2/edit_inline/: stacked-django-5.0.html  tabular-django-5.0.html
bodepontoio/templates/bodepontoio/: email_confirmation_email.html  email_confirmation_otp.html  login_otp.html  password_reset_email.html  password_reset_otp.html
bodepontoio/templatetags/: bodepontoio_tags.py
bodepontoio/tests/: conftest.py  test_base_models.py  test_cep_service.py  test_cleaners.py  test_database_mysql.py  test_dates.py  test_email_ofuscate.py  test_exception_handler.py  test_exception_handler_v2.py  test_forms_fields.py  test_management_commands.py  test_metrics.py  test_middleware.py  test_new_models.py  test_numbers.py  test_otp.py  test_pagination.py  test_passwords.py  test_renderer.py  test_settings.py  test_setup.py  test_signals.py  test_strings.py  test_templatetags.py  test_views_auth.py  test_views_email_confirmation.py  test_views_email_confirmation_otp.py  test_views_password.py  test_views_password_reset_otp.py  test_views_passwordless_login.py  test_workdays.py
bodepontoio/utils/: cleaners.py  dates.py  numbers.py  pagination.py  strings.py  workdays.py
bodepontoio/utils/database/: mysql.py
bodepontoio/utils/email/: ofuscate.py
bodepontoio/utils/forms/: fields.py
bodepontoio/utils/passwords/: generate_hash.py
tests/: conftest.py  test_base_models.py  test_cep_service.py  test_cleaners.py  test_database_mysql.py  test_dates.py  test_email_ofuscate.py  test_exception_handler.py  test_forms_fields.py  test_geo.py  test_models.py  test_new_models.py  test_numbers.py  test_pagination.py  test_passwords.py  test_renderer.py  test_settings.py  test_signals.py  test_strings.py  test_views_auth.py  test_views_email_confirmation.py  test_views_password.py  test_views_social.py  test_workdays.py  urls.py
tests/testapp/: models.py
