[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-bodepontoio"
version = "0.1.0"
description = "Reusable Django authentication app with JWT and email-based user model"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2",
    "djangorestframework>=3.14",
    "djangorestframework-simplejwt>=5.3",
    "google-auth[requests]>=2.0",
    "requests>=2.20",
    "dnspython>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-django"]
tinify = ["tinify"]
sentry = ["sentry-sdk"]

[tool.hatch.build.targets.wheel]
packages = ["bodepontoio", "bodepontoio.geo"]

[tool.hatch.build.targets.wheel.force-include]
"bodepontoio/assets" = "bodepontoio/assets"
"bodepontoio/templates" = "bodepontoio/templates"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.test_settings"
addopts = "--import-mode=importlib"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.0",
    "pytest-cov>=7.0.0",
]
