[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bodepontoio"
dynamic = ["version"]
description = "Toolbox da Bode.io para projetos em Django"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2",
    "dnspython>=2.0",
    "requests>=2.28",
]

[project.optional-dependencies]
tinify = ["tinify"]
sentry = ["sentry-sdk"]
auth = [
    "djangorestframework>=3.14",
    "djangorestframework-simplejwt>=5.0",
    "google-auth>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
]

[tool.setuptools.packages.find]
include = ["bodepontoio*"]

[tool.setuptools.package-data]
bodepontoio = [
    "assets/*.csv",
    "templates/**/*.html",
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "bodepontoio.tests.test_settings"
addopts = "--import-mode=importlib"
