[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bodepontoio"
dynamic = ["version"]
description = "Toolbox da Bode.io para projetos em Django"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "django>=4.2",
    "dnspython>=2.0",
    "google-auth>=2.0",
    "requests>=2.28",
]

[project.optional-dependencies]
tinify = ["tinify"]
sentry = ["sentry-sdk"]
auth = [
    "djangorestframework>=3.14",
    "djangorestframework-simplejwt>=5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "django-stubs>=5.0",
    "types-requests>=2.31",
]

[tool.setuptools.packages.find]
include = ["bodepontoio*"]

[tool.setuptools.package-data]
bodepontoio = [
    "assets/*.csv",
    "templates/**/*.html",
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "bodepontoio.tests.test_settings"
addopts = "--import-mode=importlib --cov=bodepontoio --cov-report=term-missing --cov-report=xml"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
exclude = ["bodepontoio/tests"]

[[tool.mypy.overrides]]
module = "bodepontoio.admin"
disable_error_code = ["attr-defined"]

[tool.django-stubs]
django_settings_module = "bodepontoio.tests.test_settings"
